feat(infrastructure): add docker setup and database configuration
- Add docker-compose files for frontend and backend services
- Implement Postgres database configuration with TypeORM
- Set up environment variables and config modules
- Update README with database setup instructions
- Add necessary dependencies for database and configuration

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,14 +17,30 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js",
+    "migration:generate": "npm run typeorm -- migration:generate ./src/migrations/initial -d ./src/config/typeorm.datasource.ts",
+    "migration:run": "npm run typeorm -- migration:run -d ./src/config/typeorm.datasource.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d ./src/config/typeorm.datasource.ts"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/cqrs": "^11.0.3",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.5",
+    "@nestjs/typeorm": "^11.0.0",
+    "cache-manager": "^7.2.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "joi": "^17.12.0",
+    "pg": "^8.17.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
+    "typeorm": "^0.3.28"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -50,6 +66,12 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
+  },
+  "overrides": {
+    "diff": "^8.0.3",
+    "ts-node": {
+      "diff": "^8.0.3"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
