--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,9 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node -r tsconfig-paths/register node_modules/typeorm/cli.js",
-    "migration:generate": "npm run typeorm -- migration:generate ./src/migrations/initial -d ./src/config/typeorm.datasource.ts",
-    "migration:run": "npm run typeorm -- migration:run -d ./src/config/typeorm.datasource.ts",
-    "migration:revert": "npm run typeorm -- migration:revert -d ./src/config/typeorm.datasource.ts"
+    "migration:generate": "npm run typeorm -- migration:generate ./src/infrastructure/database/migrations/InitialMigration -d ./src/config/typeorm.config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d ./src/config/typeorm.config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d ./src/config/typeorm.config.ts"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^3.1.0",
