feat(loan-calculator): implement loan calculator module with swagger docs
- Add new loan calculator module with controller, service and DTOs
- Configure TypeORM entities and repository for loan calculations
- Set up Swagger documentation with base configuration
- Add path mapping for modules in tsconfig
- Register loan calculator module in app module

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -23,7 +23,8 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@config/*": ["src/config/*"],
-      "@infrastructure/*": ["src/infrastructure/*"]
+      "@infrastructure/*": ["src/infrastructure/*"],
+      "@modules/*": ["src/modules/*"]
     }
   }
 }
